<resources>
    <string name="app_name">Walkeeper</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Home">Шагомер</string>
    <string name="gps">GPS</string>
    <string name="Profile">Профиль</string>

    <string name="km_initial_values">0.00</string>
    <string name="kkal_initial_values">0.0</string>
    <string name="time_walking_initial_values">00:00:00</string>

    <string name="height_interval_rule">Рост в интервале от 20 до 240 см</string>
    <string name="weight_interval_rule">Вес в интервале от 20 до 300 см</string>

    <string name="time_walking">Время ходьбы</string>

    <string name="start_button_text">Старт</string>
    <string name="pause_button_text">Пауза</string>
    <string name="resume_button_text">Продолжить</string>
    <string name="reset_button_text">Сбросить</string>

    <string name="dialog_fragment_steps_title">Укажите количество шагов</string>
    <string name="dialog_fragment_steps_num_steps_edit_text">Число шагов</string>
    <string name="ok_button_text">OK</string>

    <string name="second_fragment_gps_toolbar_title_text">GPS</string>

    <string name="fragment_third_gender_text">Пол</string>

    <string name="fragment_third_man_text">Мужской</string>
    <string name="fragment_third_woman_text">Женский</string>

    <string name="fragment_third_height_text">Рост</string>
    <string name="fragment_third_weight_text">Вес</string>

    <string name="fragment_third_kkal_hint">Нужно для расчета калорий</string>

    <string name="fragment_third_language_hint_text_view">Изменить язык приложения</string>
    <string name="fragment_third_language_title_text_view">Язык</string>

    <string name="dialog_fragment_height_title_text">Укажите ваш рост</string>
    <string name="dialog_fragment_weight_title_text">Укажите ваш вес</string>

    <string name="save_button_text">Сохранить</string>

    <string name="activity_gender_choose_gender_title_text">Выберите пол</string>
    <string name="activity_gender_choose_gender_description_text">Это нужно для данных в профиле.</string>
    <string name="activity_gender_next_button_text">ДАЛЬШЕ</string>

    <string name="activity_profile_data_description_text">Для точности расчетов укажите точные данные.</string>
    <string name="activity_profile_data_height_hint_text">0 см</string>
    <string name="activity_profile_data_weight_hint_text">0 кг</string>
    <string name="activity_profile_data_start_button_text">НАЧАЛО</string>

    <string-array name="Languages">
        <item>Русский</item>
        <item>Қазақша</item>
    </string-array>

    <string-array name="Genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

</resources>