<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_steps_title"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/dark_text_color"
        />

    <EditText
        android:id="@+id/set_steps_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_fragment_steps_num_steps_edit_text"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        />

    <Button
        android:id="@+id/dialog_fragment_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button_text"
        android:layout_gravity="center"
        android:background="@drawable/circle_button_ripple"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        />


</LinearLayout>