<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".GenderActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_app"
        android:text="@string/activity_gender_choose_gender_title_text"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_gender_choose_gender_description_text"
        android:gravity="center"
        android:textColor="@color/secondary_app"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_app"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/activity_gender_woman_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:src="@drawable/woman"
            />

        <ImageView
            android:id="@+id/activity_gender_man_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:src="@drawable/man"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/activity_gender_woman_done_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_done"
            android:visibility="invisible"
            />

        <ImageView
            android:id="@+id/activity_gender_man_done_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_done"
            android:visibility="invisible"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/activity_gender_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_gender_next_button_text"
            android:enabled="false"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_activity_profile_data_button_continue"/>

    </LinearLayout>

</LinearLayout>